gitops/apps/rhcl-demo/appsets/tracing/resources/02-namespace-opentelemetry-operator.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openshift-opentelemetry-operator
  annotations:
    argocd.argoproj.io/sync-wave: "0"
