gitops/apps/rhcl-demo/appsets/tracing/resources/03-namespace-cluster-observability-operator.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openshift-cluster-observability-operator
  annotations:
    argocd.argoproj.io/sync-wave: "0"
