gitops/apps/rhcl-demo/appsets/tracing/resources/namespace-observability.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rhcl-observability
  annotations:
    argocd.argoproj.io/sync-wave: "0"
