gitops/apps/rhcl-demo/appsets/tracing/resources/namespace-opentelemetry.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openshift-opentelemetry
  annotations:
    argocd.argoproj.io/sync-wave: "0"
