gitops/apps/rhcl-demo/appsets/tracing/resources/namespace-tempo-operator.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openshift-tempo-operator
  annotations:
    argocd.argoproj.io/sync-wave: "0"
