gitops/apps/rhcl-demo/appsets/tracing/resources/tempo-jaeger-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tempo-jaeger-proxy
  namespace: rhcl-observability
  labels:
    app: tempo-jaeger-proxy
  annotations:
    argocd.argoproj.io/sync-wave: "68"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tempo-jaeger-proxy
  template:
    metadata:
      labels:
        app: tempo-jaeger-proxy
    spec:
      containers:
        - name: nginx
          image: registry.redhat.io/ubi10/nginx-126:10.1
          command: ["nginx"]
          args: ["-g", "daemon off;"]
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - name: nginx-conf
              mountPath: /opt/app-root/etc/nginx.default.d
              readOnly: true
            - name: query-frontend-mtls
              mountPath: /etc/query-frontend
              readOnly: true
      volumes:
        - name: nginx-conf
          configMap:
            name: tempo-jaeger-proxy-nginx
        - name: query-frontend-mtls
          secret:
            secretName: tempo-simplest-query-frontend-mtls
