gitops/apps/rhcl-demo/appsets/tracing/resources/40-minio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  namespace: rhcl-observability
  labels:
    app: minio
  annotations:
    argocd.argoproj.io/sync-wave: "21"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
        - name: minio
          image: quay.io/minio/minio:latest
          args:
            - server
            - /data
            - --console-address
            - ":9001"
          ports:
            - name: api
              containerPort: 9000
            - name: console
              containerPort: 9001
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: rhcl-observability
  annotations:
    argocd.argoproj.io/sync-wave: "21"
spec:
  selector:
    app: minio
  ports:
    - name: api
      port: 9000
      targetPort: 9000
    - name: console
      port: 9001
      targetPort: 9001
