gitops/apps/rhcl-demo/appsets/tracing/resources/service-tempo-jaeger-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: tempo-jaeger-ui
  namespace: rhcl-observability
  annotations:
    argocd.argoproj.io/sync-wave: "69"
spec:
  selector:
    app: tempo-jaeger-proxy
  ports:
    - name: http
      port: 80
      targetPort: 8080
