gitops/apps/rhcl-demo/appsets/tracing/resources/route-tempo-jaeger-ui.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: tempo-jaeger
  namespace: rhcl-observability
  annotations:
    argocd.argoproj.io/sync-wave: "70"
spec:
  to:
    kind: Service
    name: tempo-jaeger-ui
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
