gitops/apps/rhcl-demo/appsets/tracing/resources/networkpolicy-allow-otel-to-tempo-distributor.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: tempo-simplest-distributor-allow-rhcl-observability-otel
  namespace: rhcl-observability
  annotations:
    argocd.argoproj.io/sync-wave: "35"
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: distributor
      app.kubernetes.io/instance: simplest
      app.kubernetes.io/managed-by: tempo-operator
      app.kubernetes.io/name: tempo
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: opentelemetry-collector
              app.kubernetes.io/instance: rhcl-observability.otel
              app.kubernetes.io/managed-by: opentelemetry-operator
              app.kubernetes.io/part-of: opentelemetry
      ports:
        - protocol: TCP
          port: 4317
        - protocol: TCP
          port: 4318
