gitops/apps/rhcl-demo/appsets/tracing/resources/networkpolicy-allow-tempo-jaeger-proxy-to-query-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-tempo-jaeger-proxy-to-query-frontend
  namespace: rhcl-observability
  annotations:
    argocd.argoproj.io/sync-wave: "69"
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: query-frontend
      app.kubernetes.io/instance: simplest
      app.kubernetes.io/managed-by: tempo-operator
      app.kubernetes.io/name: tempo
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: tempo-jaeger-proxy
      ports:
        - protocol: TCP
          port: 16686
